Working on species-gene tree cartoon.

--- a/gene-tree-template.tex
+++ b/gene-tree-template.tex
@@ -105,17 +105,19 @@ node lower right/.style={font=\small,anchor=north west,text height=0.240cm,text 
         \node (a6) [right=0mm of c3allele6, circle, \greenallelecolor,      fill, inner sep = 1.2pt] {};
     }{}
     \ifshowallelelabels{
-        \node [below=-1.5mm of a3, text=\alleleLabelColor] {\tiny ($\allelecount[1], \redallelecount[1]) = (3, 1)$};
-        \node [above=-1.5mm of a4, text=\alleleLabelColor] {\tiny ($\allelecount[2], \redallelecount[2]) = (3, 2)$};
+        \node [right=0mm of a2, text=\alleleLabelColor] {\tiny ($\allelecount, \redallelecount) = (3, 1)$};
+        \node [right=0mm of a5, text=\alleleLabelColor] {\tiny ($\allelecount, \redallelecount) = (3, 2)$};
+        % \node [below=-1.5mm of a3, text=\alleleLabelColor] {\tiny ($\allelecount[1], \redallelecount[1]) = (3, 1)$};
+        % \node [above=-1.5mm of a4, text=\alleleLabelColor] {\tiny ($\allelecount[2], \redallelecount[2]) = (3, 2)$};
         
-        \coordinate (abracket1) at (6.5, 0.75);
-        \coordinate (abracket2) at (6.6, 0.75);
-        \coordinate (abracket3) at (6.6, 0.28);
-        \coordinate (abracket4) at (6.5, 0.28);
-        \coordinate (anotation) at (6.6, 0.50);
+        % \coordinate (abracket1) at (6.5, 0.75);
+        % \coordinate (abracket2) at (6.6, 0.75);
+        % \coordinate (abracket3) at (6.6, 0.28);
+        % \coordinate (abracket4) at (6.5, 0.28);
+        % \coordinate (anotation) at (6.6, 0.50);
         
-        \draw [thick, line cap=rect, \alleleBracketColor] (abracket1) -- (abracket2) -- (abracket3) -- (abracket4);
-        \node [right=0mm of anotation, text=\alleleBracketLabelColor] {$\leafallelecounts, \leafredallelecounts$};
+        % \draw [thick, line cap=rect, \alleleBracketColor] (abracket1) -- (abracket2) -- (abracket3) -- (abracket4);
+        % \node [right=0mm of anotation, text=\alleleBracketLabelColor] {$\leafallelecounts, \leafredallelecounts$};
     }{}
     \ifshowgenetree{
         \draw[line width=\geneLineageWidth, \greenbranchcolor] (c3allele1) -- (c3a1top);
