Tweaking gene-species tree cartoon.

--- a/gene-tree-preamble.tex
+++ b/gene-tree-preamble.tex
@@ -31,6 +31,8 @@
 \newcommand{\ifshowrootlabels}[2]{#1}
 \newcommand{\ifshowleaflabels}[2]{#1}
 
+\newcommand{\ifshowinternalallelelabels}[2]{#1}
+
 \newcommand{\ifshowgenetree}[2]{#1}
 
 \newcommand{\leafLabelOffset}{0mm}
@@ -59,6 +61,7 @@
 \newcommand{\nodeLabelColor}{black!70}
 \newcommand{\popSizeLabelColor}{black!70}
 \newcommand{\alleleLabelColor}{black!70}
+\newcommand{\internalAlleleLabelColor}{black!70}
 \newcommand{\alleleBracketColor}{black!70}
 \newcommand{\alleleBracketLabelColor}{black!70}
 
