--- a/gene-tree-template.tex
+++ b/gene-tree-template.tex
@@ -105,8 +105,8 @@ node lower right/.style={font=\small,anchor=north west,text height=0.240cm,text 
         \node (a6) [right=0mm of c3allele6, circle, \greenallelecolor,      fill, inner sep = 1.2pt] {};
     }{}
     \ifshowallelelabels{
-        \node [right=0mm of a2, text=\alleleLabelColor] {\tiny ($\allelecount, \redallelecount) = (3, 1)$};
-        \node [right=0mm of a5, text=\alleleLabelColor] {\tiny ($\allelecount, \redallelecount) = (3, 2)$};
+        \node [right=0mm of a2, text=\alleleLabelColor] {\tiny ($\allelecount[B], \redallelecount[B]) = (3, 1)$};
+        \node [right=0mm of a5, text=\alleleLabelColor] {\tiny ($\allelecount[B], \redallelecount[B]) = (3, 2)$};
         % \node [below=-1.5mm of a3, text=\alleleLabelColor] {\tiny ($\allelecount[1], \redallelecount[1]) = (3, 1)$};
         % \node [above=-1.5mm of a4, text=\alleleLabelColor] {\tiny ($\allelecount[2], \redallelecount[2]) = (3, 2)$};
         
@@ -142,6 +142,14 @@ node lower right/.style={font=\small,anchor=north west,text height=0.240cm,text 
 
         \draw[line cap=rect, line width=\geneLineageWidth, \redbranchcolor] (c3a5top) -- (c3a6top);
         \draw[line cap=rect, line width=\geneLineageWidth, \redbranchcolor] (c3a4top) -- (c3a56top);
+
+        \ifshowinternalallelelabels{
+            % \node [below=0mm of c3inttop, text=\alleleLabelColor] {\tiny ($\allelecount[T], \redallelecount[T]) = (1, 0)$};
+            \node [above right = -1.3mm and -1mm of c3inttop, text=\internalAlleleLabelColor] {\tiny ($\allelecount[T], \redallelecount[T]) = (1, 0)$};
+            \node [below right = 0.3mm and -1mm of c3intbottom, text=\internalAlleleLabelColor] {\tiny ($\allelecount[T], \redallelecount[T]) = (1, 0)$};
+            \node [left = -1mm of c3intmerge, text=\internalAlleleLabelColor, align=center, font=\tiny\linespread{0.6}] {($\allelecount[B], \redallelecount[B])$ \\ $= (2, 0)$};
+
+        }{}
     }{}
 }{
     \ifshowalleles{
