--- a/sp-tree-gene-tree.tex
+++ b/sp-tree-gene-tree.tex
@@ -13,12 +13,14 @@
 \renewcommand{\ifshownodelabels}[2]{#2}
 \renewcommand{\ifshowalleles}[2]{#1}
 \renewcommand{\ifshowallelelabels}[2]{#1}
+\renewcommand{\ifshowinternalallelelabels}[2]{#1}
 \renewcommand{\ifshowpopsizelabels}[2]{#2}
 \renewcommand{\ifshowrootlabels}[2]{#2}
 \renewcommand{\ifshowleaflabels}[2]{#2}
 \renewcommand{\nodeLabelColor}{black!70}
 \renewcommand{\popSizeLabelColor}{black!70}
 \renewcommand{\alleleLabelColor}{black!70}
+\renewcommand{\internalAlleleLabelColor}{black!70}
 \renewcommand{\alleleBracketColor}{black!70}
 \renewcommand{\alleleBracketLabelColor}{black!70}
 \renewcommand{\popLineageColor}{black!30}
@@ -51,6 +53,20 @@
 \pgfmathsetmacro\coalthree{(5.6-(3.0*\coalsep)}
 \pgfmathsetmacro\coalfour{(5.6-(8.0*\coalsep)}
 \pgfmathsetmacro\coalfive{(\thirddepth-(6.0*\coalsep)}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/sp-tree-gene-tree-internal-allele-labels}
+\input{gene-tree-template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\internalAlleleLabelColor}{black!30}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/sp-tree-gene-tree-masked-internal-allele-labels}
+\input{gene-tree-template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\ifshowinternalallelelabels}[2]{#2}
 
 \thispagestyle{empty}
 \beginpgfgraphicnamed{model-cartoons/sp-tree-gene-tree-allele-labels}
