More work on sp-gene tree figs.

--- a/gene-tree-preamble.tex
+++ b/gene-tree-preamble.tex
@@ -38,6 +38,12 @@
 \newcommand{\leafLabelOffset}{0mm}
 \newcommand{\alleleLeafLabelOffset}{0mm}
 
+\newcommand{\ifshoweventlabels}[2]{#2}
+\newcommand{\ifshoweventlines}[2]{#2}
+\newcommand{\eventLineColor}{black!60}
+\newcommand{\eventLineWidth}{1pt}
+\newcommand{\eventLabelColor}{black!70}
+
 % 1.6 deep
 % 5.6 shallow
 % 3.6 middle
