Fixing allele count label in simple graphic.

--- a/gene-tree-template-simple-count-labels.tex
+++ b/gene-tree-template-simple-count-labels.tex
@@ -166,7 +166,8 @@ node lower right/.style={font=\small,anchor=north west,text height=0.240cm,text 
             % \node [below=0mm of c3inttop, text=\alleleLabelColor] {\tiny ($\allelecount, \redallelecount) = (1, 0)$};
             \node [above right = -1.3mm and -1mm of c3inttop, text=\internalAlleleLabelColor] {\tiny $(\allelecount, \redallelecount) = (1, 0)$};
             \node [below right = 0.3mm and -1mm of c3intbottom, text=\internalAlleleLabelColor] {\tiny $(\allelecount, \redallelecount) = (1, 0)$};
-            \node [left = -1mm of c3intmerge, text=\internalAlleleLabelColor, align=center, font=\tiny\linespread{0.6}] {$(\allelecount, \redallelecount)$ \\ $= (2, 0)$};
+            % \node [left = -1mm of c3intmerge, text=\internalAlleleLabelColor, align=center, font=\tiny\linespread{0.6}] {$(\allelecount, \redallelecount)$ \\ $= (2, 0)$};
+            \node [left = -1mm of c3intmerge, text=\internalAlleleLabelColor] {\tiny $(\allelecount, \redallelecount) = (2, 0)$};
 
         }{}
     }{}
